--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
     implementation 'com.google.firebase:firebase-firestore'
+
+    implementation 'com.google.android.material:material:1.1.0-beta01'
+
 }
