--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:exported="false" />
 
         <activity
+            android:name=".calendarActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".floating"
             android:exported="false" />
 
