--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-beta01'
 
     implementation 'com.google.android.material:material:1.2.1'
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
+
+    implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
 }
