--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,12 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
 
     implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
+
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
 }
