--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,37 +33,10 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-        <activity
-            android:name=".eat_activity"
-            android:exported="false" />
 
         <activity
             android:name=".WriteActivity"
             android:exported="false"/>
-
-        <activity
-            android:name=".study_activity"
-            android:exported="false"/>
-
-        <activity
-            android:name=".delivery_activity"
-            android:exported="false" />
-
-        <activity
-            android:name=".exercise_activity"
-            android:exported="false" />
-
-        <activity
-            android:name=".together_activity"
-            android:exported="false" />
-
-        <activity
-            android:name=".shopping_activity"
-            android:exported="false" />
-
-        <activity
-            android:name=".floating"
-            android:exported="false" />
 
         <activity
             android:name=".MyActivity"
@@ -87,6 +60,10 @@
 
         <activity
             android:name=".UpdateActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".DrawActivity"
             android:exported="false"/>
 
     </application>
