--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.sw221103" >
+    package="com.example.sw221103">
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,56 +16,56 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sw221103"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB3QB1kIontomRG5Px_Hwjdx0Vqt7gvJPA" />
 
         <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
             android:name=".IntroActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".JoinActivity"/>
+        <activity android:name=".JoinActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-
         <activity
             android:name=".WriteActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".MyActivity"
             android:exported="false" />
-
         <activity
             android:name=".TodoActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".study_activity2"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".Test"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".ListActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".UpdateActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".DrawActivity"
-            android:exported="false"/>
+            android:exported="false" />
 
+        <activity
+            android:name=".FindActivity"
+            android:exported="false" />
     </application>
+
 </manifest>
