--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,4 +97,19 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
  */
+    implementation 'com.firebaseui:firebase-ui-database:7.2.0'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    //implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    apply plugin: 'com.google.gms.google-services'
+
+
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
