--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,13 +59,32 @@
         <activity
             android:name=".UpdateActivity"
             android:exported="false" />
+
         <activity
-            android:name=".DrawActivity"
+            android:name=".Todo2Activity"
+            android:exported="false" />
+
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".ResultActivity"
             android:exported="false" />
 
         <activity
             android:name=".FindActivity"
             android:exported="false" />
+
+        <activity android:name=".ChatMainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ChatRoomActivity"/>
+        <activity android:name=".DrawActivity"/>
     </application>
 
 </manifest>
